--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./public/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -20,8 +20,8 @@
       content="https://refine.dev/img/refine_social.png"
     />
     <title>
-      Refine - Build your React-based CRUD applications, without constraints.
-    </title>
+      Authentication Project
+        </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
